--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -55,3 +55,11 @@ code {
 ::-webkit-scrollbar-thumb:hover {
   background: #555;
 }
+
+a {
+  text-decoration: none;
+}
+
+.active {
+  background-size: 100% 0.2em !important;
+}
