--- a/src/components/common/Notification/Notification.module.scss
+++ b/src/components/common/Notification/Notification.module.scss
@@ -15,6 +15,10 @@
     transform: translate(-50%, -50%);
     box-shadow: 0px 1px 2px 1px #80808070;
 
+    &:hover {
+        cursor: pointer;
+    }
+
     @include minWidthMediaQuery(1500px) {
         width: 30vw;
     }
