--- a/src/components/Authentication/Authenticate.module.scss
+++ b/src/components/Authentication/Authenticate.module.scss
@@ -121,6 +121,7 @@ a {
     bottom: 15%;
     border-bottom: 0.05rem solid darkslategrey;
     padding-bottom: 2px;
+    z-index: 3;
 
     &:hover {
         border-bottom: 0.09rem solid darkslategray;
