--- a/src/scss/common/_buttons.scss
+++ b/src/scss/common/_buttons.scss
@@ -1,9 +1,11 @@
 @mixin button($background) {
-    padding: 6px 24px;
+    padding: 6px 0;
     border-radius: 5px;
     border-width: 0;
     background-color: $background;
     width: 85px;
+    text-align: center;
+    color: white;
 
     &:hover {
         cursor: pointer;
