--- a/src/components/Navigation/Navigation.module.scss
+++ b/src/components/Navigation/Navigation.module.scss
@@ -195,6 +195,7 @@
         background-position-y: 105%;
         background-repeat: no-repeat;
         transition: background-size 0.4s ease-out;
+        background-color: transparent;
 
         &:hover {
             background-size: 100% 0.2em;
