--- a/src/components/UserProfile/modules/ProfileCard.module.scss
+++ b/src/components/UserProfile/modules/ProfileCard.module.scss
@@ -2,6 +2,7 @@
     box-shadow: -10px 6px 20px 4px #00000033;
     position: relative;
     width: 275px;
+    height: 400px;
 
     .user-profile-header {
         width: 100%;
