--- a/src/components/Profile/modules/ProfileEdit/ProfileEdit.module.scss
+++ b/src/components/Profile/modules/ProfileEdit/ProfileEdit.module.scss
@@ -1,3 +1,5 @@
+@use 'src/scss/common/colors' as *;
+
 .user-profile-article {
     box-shadow: -10px 6px 20px 4px #00000033;
     position: relative;
@@ -119,4 +121,77 @@
 .settings-icon {
     @include icon();
     right: 4%;
+}
+
+
+.warning-icon-email,
+.warning-icon {
+    position: absolute;
+    font-size: 0.9rem;
+    right: 5%;
+    top: 53%;
+    color: $orange-accent-color;
+}
+
+.fail-validation-msg-email,
+.fail-validation-msg {
+    color: $dark-orange-accent-color;
+    text-align: center;
+    position: absolute;
+    left: 20%;
+    top: 78%;
+    font-weight: 600;
+    font-size: 0.75rem;
+}
+
+.warning-icon {
+    right: 10%;
+    top: 73%;
+}
+
+.fail-validation-msg {
+    left: 20%;
+    top: 78%;
+}
+
+.warning-icon-email {
+    font-size: 0.9rem !important;
+}
+
+.fail-validation-msg-email {
+    text-align: center;
+    width: 200%;
+    left: -70px;
+    top: 50px;
+}
+
+.submit-btn {
+    border: none;
+    background-color: rgba(222, 137, 0, 0.8);
+    padding: 7px 35px;
+    color: white;
+    font-size: 1rem;
+    transition: all 0.5s;
+    box-shadow: 0px 15px 20px 4px #00000033;
+
+    &:hover {
+        cursor: pointer;
+        background: $orange-accent-color;
+    }
+}
+
+.button-container {
+    position: relative;
+    width: 100%;
+    display: inline-block;
+    align-self: flex-end;
+    margin: 20px 16%;
+}
+
+.continue-icon {
+    position: absolute;
+    color: white;
+    top: 9px;
+    left: 10px;
+    font-size: 0.9rem;
 }
