--- a/src/components/RecipeDetails/modules/RecipePanel/modules/RecipePanelNavigation.module.scss
+++ b/src/components/RecipeDetails/modules/RecipePanel/modules/RecipePanelNavigation.module.scss
@@ -1,14 +1,18 @@
 @use 'src/scss/common/media' as *;
+@use 'src/scss/common/colors' as *;
 
 .navigation {
     background: #a2a8babd;
     border-radius: 6px 6px 35px 35px;
     width: 100%;
     padding: 2px 0;
+    position: relative;
 
     @include maxWidthMediaQuery(1000px) {
         order: -1;
         border-radius: 35px 35px 6px 6px;
+        display: flex;
+        flex-direction: column-reverse;
     }
 
     ul {
@@ -34,5 +38,77 @@
             background-size: 100% 0.15em;
             color: #57595fc9
         }
+    }
+}
+
+.add-comment-section {
+    padding: 13px 13px 10px 13px;
+    display: flex;
+    background: rgba(184, 188, 202, 0.5);
+    align-content: center;
+    align-items: center;
+    justify-content: center;
+
+    .image-container {
+        width: 35px;
+        height: 35px;
+        min-width: 35px;
+        min-height: 35px;
+        box-shadow: 0px 1px 7px 0px #afb6ba;
+        overflow: hidden;
+        border-radius: 50%;
+
+        img {
+            width: 100%;
+            height: 100%;
+        }
+    }
+
+    input {
+        border-radius: 6px;
+        height: 35px;
+        width: 305px;
+        margin-left: 8px;
+        border-width: 0;
+        box-shadow: 0px 1px 7px 0px #afb6ba;
+        padding-left: 10px;
+
+        @include maxWidthMediaQuery(425px) {
+            width: 250px;
+        }
+
+        &:focus {
+            outline: none
+        }
+    }
+}
+
+.warning-icon {
+    position: absolute;
+    color: $orange-accent-color;
+    top: 18%;
+    right: 15%;
+    font-size: 0.9rem;
+
+    @include maxWidthMediaQuery(1000px) {
+        top: 72%;
+        right: 20%;
+    }
+}
+
+.fail-validation-msg {
+    color: #57595fc9;
+    text-align: center;
+    position: absolute;
+    left: 30%;
+    top: 40%;
+    font-weight: 600;
+    font-size: 0.75rem;
+
+    @include maxWidthMediaQuery(1000px) {
+        width: 100%;
+        left: 0;
+        top: 50%;
+        text-align: center;
     }
 }
